# serializer version: 1
# name: test_list_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-89cac9f1
  
    ''',
  })
# ---
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-89cac9f1
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      example-89cac9f1
      requires-package-does-not-exist-59108293
      requires-exact-version-does-not-exist-bc5f5f6d
      requires-greater-version-does-not-exist-670431f9
      requires-less-version-does-not-exist-9a75991b
      transitive-requires-package-does-not-exist-ca79eaa2
      requires-direct-incompatible-versions-350bd4b0
      requires-transitive-incompatible-with-root-version-3240dab1
      requires-transitive-incompatible-with-transitive-8329cfc0
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-89cac9f1
      scenarios/requires-does-not-exist.json
          requires-package-does-not-exist-59108293
          requires-exact-version-does-not-exist-bc5f5f6d
          requires-greater-version-does-not-exist-670431f9
          requires-less-version-does-not-exist-9a75991b
          transitive-requires-package-does-not-exist-ca79eaa2
      scenarios/requires-incompatible-versions.json
          requires-direct-incompatible-versions-350bd4b0
          requires-transitive-incompatible-with-root-version-3240dab1
          requires-transitive-incompatible-with-transitive-8329cfc0
  
    ''',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example
      scenarios/requires-does-not-exist.json
          requires-package-does-not-exist
          requires-exact-version-does-not-exist
          requires-greater-version-does-not-exist
          requires-less-version-does-not-exist
          transitive-requires-package-does-not-exist
      scenarios/requires-incompatible-versions.json
          requires-direct-incompatible-versions
          requires-transitive-incompatible-with-root-version
          requires-transitive-incompatible-with-transitive
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_output_format
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`",
            "source": "[PWD]/scenarios/example.json",
            "prefix": "example-89cac9f1"
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
